infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # kubernetes.io/ingress.class: nginx
    # 42
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-staging'
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: 'true'
    # service.beta.kubernetes.io/do-loadbalancer-certificate-id: '5e66e05d-20b2-491e-8bb8-edf581525fa2'
spec:
  tls:
    - hosts:
        - www.kimbeautyspa.store
      secretName: echo-tls
  ingressClassName: nginx
  rules:
    - host: www.kimbeautyspa.store
      http:
        paths:
          - path: /payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /products/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-srv
                port:
                  number: 3000
          - path: /orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /cart/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-srv
                port:
                  number: 3000
          - path: /appointments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: appointments-srv
                port:
                  number: 3000
          - path: /services/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: services-srv
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.kimbeautyspa.store'
    service.beta.kubernetes.io/do-loadbalancer-protocol: 'https'
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: '5e66e05d-20b2-491e-8bb8-edf581525fa2'
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: 'false'
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: '443'
    service.beta.kubernetes.io/do-loadbalancer-http-ports: '80'
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-port: '443'
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: 'https'
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: /healthz
    # service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: 'true'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
